[gd_scene load_steps=5 format=3 uid="uid://norhu5mh05ax"]

[ext_resource type="Script" uid="uid://cjxj5lmy3ix7b" path="res://screens/screen_manager.gd" id="1_4lin0"]
[ext_resource type="PackedScene" uid="uid://1m3cftdxaq86" path="res://screens/title_screen.tscn" id="2_ewxhi"]
[ext_resource type="PackedScene" uid="uid://b5kmdmxcymin2" path="res://screens/test_screen.tscn" id="3_abpar"]
[ext_resource type="Script" uid="uid://bh16622n4xldu" path="res://scripts/test_screen.gd" id="4_kt5tb"]

[node name="ScreenManager" type="Node2D"]
script = ExtResource("1_4lin0")

[node name="TitleScreen" parent="." instance=ExtResource("2_ewxhi")]

[node name="TestScreen" parent="." instance=ExtResource("3_abpar")]
visible = false
script = ExtResource("4_kt5tb")

[connection signal="start_game" from="TitleScreen" to="." method="_on_title_screen_start_game"]
